<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <Button
        android:layout_width="35dp"
        android:layout_height="130dp"
        android:text="@string/jiben"
        android:onClick="onClick"
        android:background="#66b3ff"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="5dp"
        android:padding="5dp"
        android:textColor="#fff"
        android:id="@+id/btn1" />

    <Button
        android:layout_width="35dp"
        android:layout_height="130dp"
        android:text="@string/jinhua"
        android:onClick="onClick"
        android:padding="5dp"
        android:background="#23238e"
        android:textColor="#fff"
        android:layout_marginLeft="5dp"
        android:id="@+id/btn2" />

    <Button
        android:layout_width="35dp"
        android:layout_height="130dp"
        android:text="@string/tujian"
        android:onClick="onClick"
        android:background="#23238e"
        android:padding="5dp"
        android:textColor="#fff"
        android:layout_marginLeft="5dp"
        android:id="@+id/btn4" />

</LinearLayout>
