<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/list_search"
            android:layout_width="match_parent"
            android:layout_height="70px"
            android:hint="@string/search"
            android:maxLength="50"
            android:layout_weight="1"
            android:textSize="20px"
            android:visibility="gone"

            android:onClick="ed"
            />
        <Button
            android:id="@+id/botton_search"
            android:layout_width="90px"
            android:layout_height="90px"
            android:text="@string/qrss"
            android:textSize="20px"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:visibility="gone"
            android:onClick="search"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">
    <ImageView
        android:id="@+id/img"
        android:layout_width="70px"
        android:layout_height="70px"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="15dp"
        />
    <TextView
        android:id="@+id/name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/pkname"
        android:gravity="center"

        />
    <TextView
        android:id="@+id/pkid"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="001"
        android:layout_marginRight="5dp"/>
    <TextView
        android:id="@+id/shux"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="#ff0000"
        android:visibility="invisible"
        />
    <TextView
        android:id="@+id/shux1"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:layout_weight="1"
        android:background="#00ff00"
        android:visibility="invisible"/>
    </LinearLayout>
</LinearLayout>
